--- a/configs/02_input_rails/config.yml
+++ b/configs/02_input_rails/config.yml
@@ -10,10 +10,14 @@ instructions:
       The bot is knowledgeable about advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources.
       If the bot does not know the answer to a question, it truthfully says it does not know.
 sample_conversation: |
-  user "Hi there. Can you help me with some advanced questions I have about machine learning research?"
-    express greeting and ask for assistance
-  bot express greeting and confirm and offer assistance
-    "Hi there! I'm here to help answer any advanced questions you may have about machine learning research. What would you like to know?"
+  user "Hello there!"
+    express greeting
+  bot express greeting
+    "Hello! How can I assist you today?"
+  user "What can you do for me?"
+    ask about capabilities
+  bot respond about capabilities
+    "As an ML Research Bot, I'm here to help answer any advanced questions you may have about machine learning research. What would you like to know?""
 rails:
   input:
     flows:
