--- a/configs/06b_io_rails_toxicity_implicit/config.yml
+++ b/configs/06b_io_rails_toxicity_implicit/config.yml
@@ -3,10 +3,6 @@ models:
     engine: openai
     model: gpt-3.5-turbo-instruct
 rails:
-  input:
-    flows:
-      - llama guard check input
-
   output:
     flows:
-      - llama guard check output
+      - check safety
