--- a/configs/06b_io_rails_toxicity_implicit/config.yml
+++ b/configs/06b_io_rails_toxicity_implicit/config.yml
@@ -3,6 +3,10 @@ models:
     engine: openai
     model: gpt-3.5-turbo-instruct
 rails:
+  input:
+    flows:
+      - llama guard check input
+
   output:
     flows:
-      - check safety
+      - llama guard check output
